# SwiftBridge

./: main.py  pyproject.toml
backend/: cloud_storage.py  signaling.py
backend/backend/uploads/: 6b4f5dff-73ff-4f01-858e-e8a291e6b70d
frontend/: receiver.html  sender.html
